# bh-backups

./: .gitignore  INSTALL.md  README  README.examples.md  README.restore.md  bh-backups.cabal  build.sh  install.sh  mysql.sh  pgsql.sh  requirments.yml  rsnapshot.SERVER.conf
defaults/: main.yml
files/: pgsql.sh
files/apt-preferences/: 10stretch
files/rsnapshot.d/lib/: home-base.rsync-filter  ispmgr.rsync-filter  root-base.rsync-filter
handlers/: main.yml
rsnapshot.d/: bh-home.rsync-filter  bh-root.rsync-filter  home-base.rsync-filter  home.rsync-filter  root-base.rsync-filter  save-root.rsync-filter  var-www.rsync-filter
rsnapshot.d/lib/: apt-logs.rsync-filter  ispmgr.rsync-filter  munin.rsync-filter  ossec.rsync-filter  root-base.rsync-filter
src/: Build.hs
src/BH/Backups/: Install.hs
src/Sgf/: Text.hs
src/Sgf/Control/: Lens.hs
src/Sgf/Development/Shake/: FilePath.hs  RsyncFilter.hs  Shell.hs  Target.hs
src/Sgf/Text/: RsyncFilter.hs
tasks/: backup_server.yml  count.yml  cron.yml  db.yml  define.yml  main.yml  rsnapshot.yml  server.yml  ssh.yml
templates/: backup_script-cnf  bh-home.rsync-filter  default_home_rsync_filter.yml  default_root_rsync_filter.yml  mysql.cnf  per_backup-rsync_filter  pgsql.cnf  pgsql.pgpass  rsnapshot.conf  save-root.rsync-filter
vars/: main.yml
