name:                bh-backups
version:             0.1.0.0
synopsis:            BH backup config and utilities.
description:         Please see README.md
homepage:            https://github.com/best-hosting/bh-backups
license:             BSD3
license-file:        LICENSE
author:              sgf-dma
maintainer:          sgf.dma@gmail.com
copyright:           2016 sgf-dma
category:            System
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:       src
  exposed-modules:      Sgf.Control.Lens
                        Sgf.Text.RsyncFilter
                        Sgf.Development.Shake.FilePath
                        Sgf.Development.Shake.RsyncFilter
                        Sgf.Development.Shake.Shell
  build-depends:        base
                        , mtl
                        , transformers
                        , filepath
                        , shake
  default-language:     Haskell2010

executable build
  hs-source-dirs:       src
  main-is:              Build.hs
  other-modules:        Sgf.Control.Lens
                        Sgf.Text.RsyncFilter
                        Sgf.Development.Shake.FilePath
                        Sgf.Development.Shake.RsyncFilter
                        Sgf.Development.Shake.Shell
  ghc-options:          -threaded -rtsopts -with-rtsopts=-IO -Wall
  build-depends:          base
                        , mtl
                        , transformers
                        , filepath
                        , directory
                        , extra
                        , shake
                        , bh-backups
  default-language:     Haskell2010

--test-suite test-test
--  type:                exitcode-stdio-1.0
--  hs-source-dirs:      test
--  main-is:             Spec.hs
--  build-depends:       base
--                     , test
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/best-hosting/bh-backups
